--- a/.luarc.json
+++ b/.luarc.json
@@ -1,6 +1,12 @@
 {
     "$schema": "https://raw.githubusercontent.com/sumneko/vscode-lua/master/setting/schema.json",
     "Lua.diagnostics.globals": [
-        "vim"
+        "vim",
+        "s",
+        "t",
+        "i",
+        "f",
+        "ai",
+        "jit"
     ]
 }
